--- a/iss_tracker/src/App.css
+++ b/iss_tracker/src/App.css
@@ -9,9 +9,8 @@
 }
 
 #background {
-
-    background-color: #101010;
+    background-image: url('./images/background.jpg');
+    background-size: cover; 
+    background-position: center;
     height: 100vh;
 }
-
-
