--- a/iss_tracker/src/App.css
+++ b/iss_tracker/src/App.css
@@ -42,3 +42,8 @@
 .lighter {
     background-color: #555555;
 }
+
+.MuiStack-root.css-10o2lyd-MuiStack-root {
+    background-color: #958e8e;
+    border-radius: 10px;
+}
